--- a/exercicio.html
+++ b/exercicio.html
@@ -15,8 +15,9 @@
         <input id="e-mail" type="email" /> <br />
         <label for="senha"> Senha </label>
         <input id="senha" type="password" /> <br />
-        <button> Cadastrar </button>
-</form>
+        <button type="submit"> Cadastrar </button>
+
+    </form>
 
 </body>
 
